methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: Boolean does not take parameters
                                                                  ;if (vuBiscuit()==true) {return true};else {return false}} 
                                                                                ^